--- a/desktop/sources/index.html
+++ b/desktop/sources/index.html
@@ -68,12 +68,12 @@
       left.controller.add('default', 'Select', 'Goto', () => { left.operator.start('goto: ') }, 'CmdOrCtrl+G')
       left.controller.add('default', 'Select', 'Open Url', () => { left.open_url() }, 'CmdOrCtrl+B')
 
-      left.controller.add('default', 'Navigation', 'Next File', () => { left.navi.next_page() }, 'CmdOrCtrl+Shift+]')
-      left.controller.add('default', 'Navigation', 'Prev File', () => { left.navi.prev_page() }, 'CmdOrCtrl+Shift+[')
-      left.controller.add('default', 'Navigation', 'Next Marker', () => { left.navi.next_marker() }, 'CmdOrCtrl+]')
-      left.controller.add('default', 'Navigation', 'Prev Marker', () => { left.navi.prev_marker() }, 'CmdOrCtrl+[')
+      left.controller.add('default', 'Navigation', 'Next File', () => { left.navi.next_page() }, 'CmdOrCtrl+Shift+PageDown')
+      left.controller.add('default', 'Navigation', 'Prev File', () => { left.navi.prev_page() }, 'CmdOrCtrl+Shift+PageUp')
+      left.controller.add('default', 'Navigation', 'Next Marker', () => { left.navi.next_marker() }, 'CmdOrCtrl+PageDown')
+      left.controller.add('default', 'Navigation', 'Prev Marker', () => { left.navi.prev_marker() }, 'CmdOrCtrl+PageUp')
 
-      left.controller.add('default', 'View', 'Toggle Navigation', () => { left.navi.toggle() }, 'CmdOrCtrl+\\')
+      left.controller.add('default', 'View', 'Toggle Navigation', () => { left.navi.toggle() }, 'CmdOrCtrl+Super+S')
       left.controller.add('default', 'View', 'Toggle Menubar', () => { app.toggleMenubar() }, 'F11')
       left.controller.add('default', 'View', 'Previous Font', () => { left.font.previousFont() }, 'CmdOrCtrl+Shift+,')
       left.controller.add('default', 'View', 'Next Font', () => { left.font.nextFont() }, 'CmdOrCtrl+Shift+.')
@@ -113,7 +113,7 @@
       left.controller.add('insert', 'Insert', 'Path', () => { left.insert.path() }, 'CmdOrCtrl+P')
       left.controller.add('insert', 'Insert', 'Header', () => { left.insert.header() }, 'CmdOrCtrl+H')
       left.controller.add('insert', 'Insert', 'SubHeader', () => { left.insert.subheader() }, 'CmdOrCtrl+Shift+H')
-      left.controller.add('insert', 'Insert', 'Comment', () => { left.insert.comment() }, 'CmdOrCtrl+/')
+      left.controller.add('insert', 'Insert', 'Comment', () => { left.insert.comment() }, 'CmdOrCtrl+Shift+.')
       left.controller.add('insert', 'Insert', 'Line', () => { left.insert.line() }, 'CmdOrCtrl+L')
       left.controller.add('insert', 'Insert', 'List', () => { left.insert.list() }, 'CmdOrCtrl+-')
       left.controller.add('insert', 'Mode', 'Stop', () => { left.insert.stop() }, 'Esc')
